--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc --build --noEmit"
+    "typecheck": "react-router typegen && tsc --build --noEmit",
+    "clean": "rm -rf build && rm -rf public/build"
   },
   "dependencies": {
     "@react-router/node": "^7.0.1",
@@ -18,14 +19,13 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.0.1",
+    "@tailwindcss/vite": "^4.0.0-beta.4",
     "@types/node": "^20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.0.0-beta.4",
     "typescript": "^5.6.3",
-    "vite": "^5.4.11",
+    "vite": "^6.0.1",
     "vite-tsconfig-paths": "^5.1.2"
   }
 }
