--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc --build --noEmit",
-    "clean": "rm -rf build && rm -rf public/build",
-    "tailwind:upgrade": "bunx @tailwindcss/upgrade@next"
+    "clean": "rm -rf build && rm -rf public/build"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.1",
@@ -26,16 +25,19 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.1",
+    "remix-auth": "^4.0.0",
+    "remix-auth-oauth2": "^3.1.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@react-router/dev": "^7.0.1",
-    "@tailwindcss/vite": "^4.0.0-beta.4",
     "@types/node": "^20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "tailwindcss": "^4.0.0-beta.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3",
     "vite": "^6.0.1",
     "vite-tsconfig-paths": "^5.1.2"
