--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:generate": "npx drizzle-kit generate"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.0.2",
     "@ai-sdk/openai": "^1.0.6",
     "@electric-sql/pglite": "^0.2.14",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -24,6 +25,7 @@
     "@react-router/node": "^7.0.1",
     "@react-router/serve": "^7.0.1",
     "@spotify/web-api-ts-sdk": "^1.2.0",
+    "add": "^2.0.6",
     "ai": "^4.0.11",
     "arctic": "^2.3.0",
     "class-variance-authority": "^0.7.1",
